--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,23 +24,23 @@
 
 [[constraint]]
   name = "k8s.io/apiextensions-apiserver"
-  version = "kubernetes-1.14.0-rc.1"
+  version = "kubernetes-1.14.0"
 
 [[constraint]]
   name = "k8s.io/apimachinery"
-  version = "kubernetes-1.14.0-rc.1"
+  version = "kubernetes-1.14.0"
 
 [[constraint]]
   name = "k8s.io/client-go"
-  version = "kubernetes-1.14.0-rc.1"
+  version = "kubernetes-1.14.0"
 
 [[constraint]]
   name = "k8s.io/apiserver"
-  version = "kubernetes-1.14.0-rc.1"
+  version = "kubernetes-1.14.0"
 
 [[constraint]]
   name = "k8s.io/component-base"
-  version = "kubernetes-1.14.0-rc.1"
+  version = "kubernetes-1.14.0"
 
 [[constraint]]
   name = "github.com/mitchellh/go-homedir"
@@ -98,15 +98,15 @@
 
 [[override]]
   name = "k8s.io/api"
-  version = "kubernetes-1.14.0-rc.1"
+  version = "kubernetes-1.14.0"
 
 [[override]]
   name = "k8s.io/kubernetes"
-  version = "v1.14.0-rc.1"
+  version = "v1.14.0"
 
 [[override]]
   name = "k8s.io/kube-aggregator"
-  version = "kubernetes-1.14.0-rc.1"
+  version = "kubernetes-1.14.0"
 
 [[override]]
   name = "k8s.io/kube-openapi"
