--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ aliases:
     - kube_1_11: &kube_1_11 "1.11.10"
     - kube_1_13: &kube_1_13 "1.13.7"
     - kube_1_14: &kube_1_14 "1.14.3"
+    - kube_1_15: &kube_1_15 "1.15.0"
   docker-login: &docker-login
     username: $DOCKER_USER
     password: $DOCKER_PASS
@@ -203,6 +204,14 @@ jobs:
     environment:
       GOPATH: "/root"
       KUBERNETES_VERSION: *kube_1_14
+      KIND_VERSION: "0.4.0"
+    steps: *e2e-kind-steps
+  e2e-kind-1_15:
+    docker: *public-golang
+    working_directory: /root/src/github.com/docker/compose-on-kubernetes
+    environment:
+      GOPATH: "/root"
+      KUBERNETES_VERSION: *kube_1_15
       KIND_VERSION: "0.4.0"
     steps: *e2e-kind-steps
   e2e-benchmark-kind:
@@ -433,6 +442,14 @@ workflows:
               only: /v.*/
             branches:
               only: /^(?!pull\/).*$/
+      - e2e-kind-1_15:
+          requires:
+            - images
+          filters:
+            tags:
+              only: /v.*/
+            branches:
+              only: /^(?!pull\/).*$/
       # - e2e-benchmark-kind:
       #     requires:
       #       - images
@@ -447,6 +464,7 @@ workflows:
             - e2e-kind-1_11
             - e2e-kind-1_13
             - e2e-kind-1_14
+            - e2e-kind-1_15
             # - e2e-benchmark-kind
           filters:
             tags:
@@ -458,6 +476,7 @@ workflows:
             - e2e-kind-1_11
             - e2e-kind-1_13
             - e2e-kind-1_14
+            - e2e-kind-1_15
             # - e2e-benchmark-kind
           filters:
             branches:
@@ -469,6 +488,7 @@ workflows:
             - e2e-kind-1_11
             - e2e-kind-1_13
             - e2e-kind-1_14
+            - e2e-kind-1_15
             # - e2e-benchmark-kind
           filters:
             branches:
