--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ aliases:
     - kube_1_13: &kube_1_13 "1.13.7"
     - kube_1_14: &kube_1_14 "1.14.3"
     - kube_1_15: &kube_1_15 "1.15.0"
+  kind_version: &kind_version "0.4.0"
   docker-login: &docker-login
     username: $DOCKER_USER
     password: $DOCKER_PASS
@@ -188,7 +189,7 @@ jobs:
     environment:
       GOPATH: "/root"
       KUBERNETES_VERSION: *kube_1_11
-      KIND_VERSION: "0.4.0"
+      KIND_VERSION: *kind_version
     steps: *e2e-kind-steps
   e2e-kind-1_13:
     docker: *public-golang
@@ -196,7 +197,7 @@ jobs:
     environment:
       GOPATH: "/root"
       KUBERNETES_VERSION: *kube_1_13
-      KIND_VERSION: "0.4.0"
+      KIND_VERSION: *kind_version
     steps: *e2e-kind-steps
   e2e-kind-1_14:
     docker: *public-golang
@@ -204,7 +205,7 @@ jobs:
     environment:
       GOPATH: "/root"
       KUBERNETES_VERSION: *kube_1_14
-      KIND_VERSION: "0.4.0"
+      KIND_VERSION: *kind_version
     steps: *e2e-kind-steps
   e2e-kind-1_15:
     docker: *public-golang
@@ -212,7 +213,7 @@ jobs:
     environment:
       GOPATH: "/root"
       KUBERNETES_VERSION: *kube_1_15
-      KIND_VERSION: "0.4.0"
+      KIND_VERSION: *kind_version
     steps: *e2e-kind-steps
   e2e-benchmark-kind:
     docker: *public-golang
@@ -220,6 +221,7 @@ jobs:
     environment:
       GOPATH: "/root"
       KUBERNETES_VERSION: *kube_1_13
+      KIND_VERSION: *kind_version
     steps: *e2e-benchmark-kind-steps
   test-unit:
     docker: *public-golang
