--- a/Dockerfile.kind
+++ b/Dockerfile.kind
@@ -1,3 +1,3 @@
-ARG BASE_IMAGE=dockertesteng/kind-node:v1.14.3-kind0.4.0
+ARG BASE_IMAGE=kindest/node:v1.14.6
 FROM ${BASE_IMAGE}
 COPY pre-loaded-images/*.tar kind/images/
