--- a/Dockerfile.kind
+++ b/Dockerfile.kind
@@ -1,3 +1,4 @@
-ARG BASE_IMAGE=kindest/node:v1.14.6
+ARG KUBERNETES_VERSION
+ARG BASE_IMAGE=kindest/node:v${KUBERNETES_VERSION}
 FROM ${BASE_IMAGE}
 COPY pre-loaded-images/*.tar kind/images/
