--- a/Dockerfile.buildkit
+++ b/Dockerfile.buildkit
@@ -13,6 +13,8 @@ RUN apk add --no-cache \
   git \
   curl
 
+ARG GOPROXY
+
 WORKDIR /go/src/github.com/docker/compose-on-kubernetes
 COPY . .
 ARG BUILDTIME
