--- a/Dockerfile.debuggable
+++ b/Dockerfile.debuggable
@@ -7,6 +7,8 @@ RUN apk add --no-cache \
   coreutils \
   make \
   git
+ARG GOPROXY
+
 RUN --mount=target=/root/.cache,type=cache git clone https://github.com/derekparker/delve.git /go/src/github.com/derekparker/delve && \
   cd /go/src/github.com/derekparker/delve && \
   git checkout v1.1.0 && \
