--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ aliases:
     - attach_workspace:
         at: /root
     - setup_remote_docker:
-        version: 18.06.0-ce
+        version: 18.09.3
     - run:
         name: "Prepare Kind and run e2e tests"
         command: |
@@ -49,7 +49,7 @@ aliases:
     - attach_workspace:
         at: /root
     - setup_remote_docker:
-        version: 18.06.0-ce
+        version: 18.09.3
     - run:
         name: "Prepare Kind and run e2e benchmark"
         command: |
@@ -82,7 +82,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          version: 17.07.0-ce
+          version: 18.09.3
       - run:
           name: Login to docker hub
           command: echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
@@ -112,7 +112,7 @@ jobs:
       - attach_workspace:
           at: /root
       - setup_remote_docker:
-          version: 18.06.0-ce
+          version: 18.09.3
       - run: make -f docker.Makefile validate
   validate-vendor:
     docker: *public-golang
@@ -146,7 +146,7 @@ jobs:
       - attach_workspace:
           at: /root
       - setup_remote_docker:
-          version: 18.06.0-ce
+          version: 18.09.3
       - run:
           name: Build images
           command: |
@@ -234,7 +234,7 @@ jobs:
       - attach_workspace:
           at: /root
       - setup_remote_docker:
-          version: 18.06.0-ce
+          version: 18.09.3
       - run:
           name: Run unit tests
           command: make -f docker.Makefile test-unit
@@ -261,7 +261,7 @@ jobs:
       - attach_workspace:
           at: /root
       - setup_remote_docker:
-          version: 17.07.0-ce
+          version: 18.09.3
       - deploy:
           name: push-to-hub
           command: |
@@ -291,7 +291,7 @@ jobs:
       - attach_workspace:
           at: /root
       - setup_remote_docker:
-          version: 17.07.0-ce
+          version: 18.09.3
       - deploy:
           name: push-to-hub
           command: |
