Fix incorrect BSD license naming
The list of accepted licenses incorrectly referred to the BSD-2-Clause
as the FreeBSD license, and the BSD-3-Clause as the NewBSD license.

See https://spdx.org/licenses/BSD-3-Clause and
https://spdx.org/licenses/BSD-2-Clause respectively.

Signed-off-by: Paul "TBBle" Hampson <Paul.Hampson@Pobox.com>

--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -4,11 +4,11 @@ blacklist:
 
 whitelist:
   - Apache-2.0
-  - FreeBSD
+  - BSD-2-Clause
+  - BSD-3-Clause
   - LGPL-3.0
   - MIT
   - MPL-2.0
-  - NewBSD
 
 exceptions:
   - bitbucket.org/ww/goautoneg # Unknown
