--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -12,6 +12,6 @@ whitelist:
   - MPL-2.0
 
 exceptions:
-  - bitbucket.org/ww/goautoneg # Unknown
-  - github.com/munnerz/goautoneg # Unknown
+  - bitbucket.org/ww/goautoneg # BSD-3-Clause, license is in the source, misdetected as Apache-2.0
+  - github.com/munnerz/goautoneg # BSD-3-Clause, license is in the source
   - github.com/opencontainers/go-digest # Apache-2.0
