Update go-digest license details
This is a misdetection, since fixed upstream in go-digest.

See https://github.com/opencontainers/go-digest/issues/37

Signed-off-by: Paul "TBBle" Hampson <Paul.Hampson@Pobox.com>

--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -14,4 +14,4 @@ whitelist:
 exceptions:
   - bitbucket.org/ww/goautoneg # BSD-3-Clause, license is in the source, misdetected as Apache-2.0
   - github.com/munnerz/goautoneg # BSD-3-Clause, license is in the source
-  - github.com/opencontainers/go-digest # Apache-2.0
+  - github.com/opencontainers/go-digest # Apache-2.0, misdetected as CC-BY-SA-4.0
