make sure we install the correct version of ginkgo
Hoping to fix:

    Output from proc 3:
      flag provided but not defined: -ginkgo.timeout
      Usage of /e2e.test:
        -alsologtostderr
          	log to standard error as well as files
        -ginkgo.dryRun
          	If set, ginkgo will walk the test hierarchy without actually running anything.  Best paired with -v.

Signed-off-by: Sebastiaan van Stijn <github@gone.nl>

--- a/Dockerfile.buildkit
+++ b/Dockerfile.buildkit
@@ -32,7 +32,7 @@ ARG KUBERNETES_VERSION
 ENV GITCOMMIT=$GITCOMMIT VERSION=$VERSION BUILDTIME=$BUILDTIME IMAGE_REPO_PREFIX=$IMAGE_REPO_PREFIX KUBERNETES_VERSION=$KUBERNETES_VERSION
 ENV CGO_ENABLED=0
 RUN --mount=target=/root/.cache,type=cache make bin/compose-controller bin/compose-controller.test e2e-binary bin/installer bin/api-server bin/api-server.test bin/e2e_benchmark
-RUN go get github.com/onsi/ginkgo/ginkgo
+RUN GO111MODULE=on go install github.com/onsi/ginkgo/ginkgo@v1.16.5
 RUN curl -fLO https://storage.googleapis.com/kubernetes-release/release/v${KUBERNETES_VERSION}/bin/linux/amd64/kubectl && \
   chmod +x ./kubectl && \
   mv ./kubectl /bin/kubectl
